# D-LIO

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  package.xml
config/: dlio.yaml  dlio_diag.yaml  dlio_dji.yaml  dlio_grandtour.yaml  dlio_snail.yaml  dlio_spagna.yaml
docs/: index.html  style.css
include/: ElapsedTime.hpp
include/dlio/: dlo6dsolver.hpp  dlo6dsolver_lie.hpp  grid_64.hpp  point_cloud_processor.hpp  tdf3d.hpp  tdf3d_64.hpp
include/dlo3d/: df3d.hpp  dlo6dsolver_lie.hpp  grid_64.hpp  tdf3d.hpp  tdf3d_64.hpp
include/ekf_filter/: ekf_filter.hpp  eskf.hpp
include/filter/: imufilter.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dlio/share/dlio/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dlio/share/dlio/cmake/: dlioConfig.cmake
install/dlio/share/dlio/config/: dlio_college.yaml  dlio_colosseo.yaml  dlio_go2.yaml  dlio_pinicio.yaml  dlio_tudorun.yaml  dlio_viral.yaml
install/dlio/share/dlio/launch/: default.rviz  dlio_college_launch.py  dlio_colosseo_launch.py  dlio_diag_launch.py  dlio_dji_launch.py  dlio_go2_launch.py  dlio_grandtour_launch.py  dlio_launch.py  dlio_pinicio_launch.py  dlio_snail_launch.py  dlio_spagna_launch.py  dlio_tudorun_launch.py  dlio_viral_launch.py
launch/: default.rviz  dlio_college_launch.py  dlio_colosseo_launch.py  dlio_diag_launch.py  dlio_dji_launch.py  dlio_go2_launch.py  dlio_grandtour_launch.py  dlio_launch.py  dlio_pinicio_launch.py  dlio_snail_launch.py  dlio_spagna_launch.py  dlio_viral_launch.py  dlo3d_college_launch.py  dlo3d_colosseo_launch.py  dlo3d_diag_launch.py  dlo3d_dji_launch.py  dlo3d_go2_launch.py  dlo3d_launch.py  dlo3d_pinicio_launch.py  dlo3d_snail_launch.py  dlo3d_spagna_launch.py  dlo3d_viral_launch.py
log/: latest_build
src/: cloud_visualizer.cpp  dlio_node.cpp  dlo3d_node.cpp  dlo3d_node_scaled.cpp  point_cloud_processor.cpp  topic_freq.cpp
tests/: README.md  combteeth.m  eee_01.csv  eee_02.csv  eee_03.csv  evaluate_all.m  evaluate_one.m  evaluation_result.mat  nya_01.csv  nya_02.csv  quad_easy.csv  sbs_01.csv  sbs_02.csv
tests/Dataset/VIRAL/: trans_B2prism.csv
tests/Dataset/VIRAL/paper_results/result_eee_01/: dlio.csv
tests/Dataset/VIRAL/paper_results/result_eee_02/: dlio.csv  leica_tf.yaml  result_eee_02_traj.fig  result_eee_02_xyz_err_t.fig  result_eee_02_xyz_h_err_t.fig  result_eee_02_xyzt.fig
tests/Dataset/VIRAL/paper_results/result_eee_03/: leica_tf.yaml  result_eee_03_traj.fig  result_eee_03_xyz_err_t.fig  result_eee_03_xyz_h_err_t.fig  result_eee_03_xyzt.fig
tests/Dataset/VIRAL/paper_results/result_nya_01/: dlio.csv  leica_tf.yaml  result_nya_01_traj.fig  result_nya_01_xyz_err_t.fig  result_nya_01_xyz_h_err_t.fig  result_nya_01_xyzt.fig
tests/Dataset/VIRAL/paper_results/result_nya_02/: leica_tf.yaml  result_nya_02_traj.fig  result_nya_02_xyz_err_t.fig  result_nya_02_xyz_h_err_t.fig  result_nya_02_xyzt.fig
tests/Dataset/VIRAL/paper_results/result_nya_03/: dlio.csv  leica_tf.yaml  result_nya_03_traj.fig  result_nya_03_xyz_err_t.fig  result_nya_03_xyz_h_err_t.fig  result_nya_03_xyzt.fig
tests/Dataset/VIRAL/paper_results/result_sbs_01/: dlio.csv  leica_tf.yaml  result_sbs_01_traj.fig  result_sbs_01_xyz_err_t.fig  result_sbs_01_xyz_h_err_t.fig  result_sbs_01_xyzt.fig
tests/Dataset/VIRAL/paper_results/result_sbs_02/: dlio.csv  leica_tf.yaml  result_sbs_02_traj.fig  result_sbs_02_xyz_err_t.fig  result_sbs_02_xyz_h_err_t.fig  result_sbs_02_xyzt.fig
tests/Dataset/VIRAL/paper_results/result_sbs_03/: dlio.csv  leica_tf.yaml  result_sbs_03_traj.fig  result_sbs_03_xyz_err_t.fig  result_sbs_03_xyz_h_err_t.fig  result_sbs_03_xyzt.fig
tests/Dataset/VIRAL/result_eee_01/: leica_pose.csv  leica_tf.yaml
tests/Dataset/VIRAL/result_eee_02/: leica_tf.yaml
tests/Dataset/VIRAL/result_eee_03/: dlo3d_runtime.csv  leica_tf.yaml  result_eee_03_traj.fig
